# WeightedSmoother

src/: CMakeLists.txt  main.cpp  render.cpp  render.h  scene.cpp  scene.h  timer.h  viewer.h  window.cpp  window.h  window.ui
src/core/: builder_ifs.h  dpqueue.h  mesh.h  meshing.h  phalfedge.h  qenergy.h  types.h
src/third/: array.h  energy.h  lbfgs.h  line_search.h  newton.h  sparse_array.cpp  sparse_array.h  sparse_matrix.cpp  sparse_matrix.h  suite_sparse_qr.h
